# API-workshop

./: .env.dev  .env.prod  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
